# Admin-Server-Client-Tool-UNI

./: .gitignore  CMakeLists.txt  README.md
OSPlaygroundCode/: CMakeLists.txt  priv_obf.cpp
client/: CMakeLists.txt  client.cpp  client.h  file.json  run.cpp  test.cpp
include/: Actions.cpp  Actions.h  data.h
include/Actions/: Action.cpp  Action.h  ActionStructures.h  ActionSystem.cpp  ActionSystem.h  ActionTypes.h  Actions.cpp  Actions.h  ActionsDef.h
include/Networking/: Networking.h
include/RequestBuilder/: RequestBuilder.h
include/Sys_utils/: IOperatingSystem.h
include/SystemManager/: IOperatingSystem.h  OperatingSystemManager.cpp  OperatingSystemManager.h
server/: CMakeLists.txt  run.cpp  server.cpp  server.h
src/: data.h
